--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <section id="home" class="min-h-screen flex items-center justify-center">
                 <div class="text-center" data-aos="fade-up">
                     <img src="./assets/images/2889.jpg" alt="Hridoy" class="rounded-full mx-auto mb-4 w-48 h-48 object-cover">
-                    <h1 class="text-4xl font-bold mb-2 text-primary">Hridoy</h1>
+                    <h1 class="text-4xl font-bold mb-2 text-primary">Milion</h1>
                     <p class="text-xl mb-4 text-gray-600 dark:text-gray-400">Web Developer</p>
                     <p class="max-w-md mx-auto text-gray-600 dark:text-gray-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet quaerat id tempore nobis ex facilis itaque, assumenda tempora in? Neque odit eum tempora? Quae sapiente esse omnis laborum voluptatibus illum.</p>
                     <div class="mt-6 flex justify-center space-x-6">
